Rewriting the Routing
Removed old Routing and added react-router to handle routing.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,7 +8,15 @@
 
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
 
+a:hover,
+a:active{
+    color: lightblue;
+}
 
 .height {
     height: 100%;
