--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.cockpit {
+  position: absolute;
+  border: 2px dotted blueviolet;
+  right: 0;
+  width: 80%;
+  height: 100%;
+  overflow: auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
