--- a/src/Components/Scheduler/Scheduler.css
+++ b/src/Components/Scheduler/Scheduler.css
@@ -7,6 +7,14 @@
     overflow: auto;
 }
 
+.surrounding{
+    position: absolute;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    overflow: auto;
+}
+
 .side-panel {
     position: absolute;
     border: 2px solid darkviolet;
