A whole lotta stuff
- Guarded routes
- using redux to store jwt tokens and other important things like isAuthenticated
- a lot of UI additions like the course description and the Register button

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -35,3 +35,13 @@
     width: 50%;
     height: 100%;
 }
+
+.course-title{
+    text-align: center;
+}
+
+.register{
+    display: inline;
+    color: deepskyblue;
+    cursor: pointer;
+}
