--- a/src/Components/Scheduler/TimeBlock/TimeBlock.css
+++ b/src/Components/Scheduler/TimeBlock/TimeBlock.css
@@ -7,5 +7,14 @@
     padding: 0;
     width: 80px;
     height: 40px;
+    font-size: 12px;
+    text-align: center;
 
+}
+
+.textField {
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    display: inline;
 }
