--- a/src/Components/Scheduler/TimeBlock/TimeBlock.css
+++ b/src/Components/Scheduler/TimeBlock/TimeBlock.css
@@ -12,6 +12,20 @@
 
 }
 
+.filledcontainer{
+    border: 3px solid lightblue;
+    display: inline-block;
+    margin-left: 13px;
+    margin-right: 14px;
+    margin-bottom: 10px;
+    padding: 0;
+    width: 80px;
+    height: 40px;
+    font-size: 12px;
+    text-align: center;
+
+}
+
 .textField {
     margin: 0;
     padding: 0;
